force-app/main/default/objects/OpportunityLineItem/fields/DSALES_PrecioServ__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PrecioServ__c</fullName>
    <formula>IF( DSALES_Servicio__c = TRUE,  UnitPrice , NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total Servicio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>