force-app/main/default/objects/OpportunityLineItem/fields/DSALES_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Servicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GEX</label>
    <type>Checkbox</type>
</CustomField>