force-app/main/default/objects/OpportunityLineItem/fields/DSALES_TipoServ__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoServ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si es una GEX o SM</description>
    <label>Tipo de servicio</label>
    <type>Checkbox</type>
</CustomField>